--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
   "name": "ipc-bridge",
   "version": "1.0.0",
-  "description": "Communication bridge for electrons ipc",
+  "description": "Examples of how to use ipc-bridge-client and ipc-bridge-server",
   "main": "./src/index.js",
   "repository": "https://github.com/JeffreyRiggle/ipc-bridge",
   "author": "<JeffreyRiggle@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "karma start karam.config.js",
-    "build": "webpack --mode=production"
-  },
-  "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "electron": "^4.1.0"
+    "start-web": "cd ./examples/website && yarn run start",
+    "electron-web-start": "cd ./examples/nativewebsite && yarn run electron-start",
+    "start-native-web": "concurrently \"yarn run start-web\" \"wait-on http://localhost:3000 && yarn run electron-web-start\""
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.0.5",
-    "jasmine-core": "^3.3.0",
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-webpack": "^3.0.5",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "concurrently": "^4.1.0",
+    "wait-on": "^3.2.0"
   }
 }
